kubernetes/traefik/traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: dashboard-traefik.192.168.0.18.traefik.me
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: web
